update driver model, worked with integration

--- a/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.html
@@ -10,9 +10,9 @@
     </div>
   </div>
   <div class="bottom">
-    <div class="endorsments-container">
+    <div class="endorsements-container">
       <span class="bottom-label">Endors:</span>
-      <span class="types">{{endorsmentsTypes}}</span>
+      <span class="types">{{endorsementsTypes}}</span>
     </div>
     <div class="restrictions-container">
       <span class="bottom-label">Restrict:</span>
