--- a/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.html
@@ -1,4 +1,4 @@
 <div class="price">
-  <span>{{paymentOptionText}}:</span>
+  <span>{{paymentTypeText}}:</span>
   <span class="rate">{{driver.rate}} {{paymentOptionIcon}}</span>
 </div>
