--- a/src/app/forms/license-form/license-form.component.html
+++ b/src/app/forms/license-form/license-form.component.html
@@ -7,9 +7,9 @@
 		</bd-form-datepicker>
 		<bd-dropdown class="bd-form-control" formControlName="stateIssued" [labelText]="'State issued'" [items]="states">
 		</bd-dropdown>
-		<bd-dropdown class="bd-form-control" formControlName="class" [labelText]="'Class'" [items]="licenseClasses">
+		<bd-dropdown class="bd-form-control" formControlName="licenseClass" [labelText]="'Class'" [items]="licenseClasses">
 		</bd-dropdown>
-		<bd-checkboxes class="bd-form-control" [labelText]="'Endors.'" formControlName="endorsments" [items]="endorsmentList">
+		<bd-checkboxes class="bd-form-control" [labelText]="'Endors.'" formControlName="endorsements" [items]="endorsmentList">
 		</bd-checkboxes>
 		<bd-checkboxes class="bd-form-control" [labelText]="'Restric.'" formControlName="restrictions" [items]="restrictionList">
 		</bd-checkboxes>
