--- a/src/app/companies/components/company-edit/components/company-edit-info/company-edit-info.component.html
+++ b/src/app/companies/components/company-edit/components/company-edit-info/company-edit-info.component.html
@@ -4,7 +4,7 @@
     sticky
     [stickyPositionInsideScroll]="true"
     [disabled]="isLoading"
-    [title]="navigationTitle"
+    [title]="defaultNavigationTitle || selectedItem.name"
     [anchors]="anchors">
   </form-navigation>
 	<company-info-form
