--- a/src/app/equipment/components/equipment-edit/equipment-edit.component.html
+++ b/src/app/equipment/components/equipment-edit/equipment-edit.component.html
@@ -4,7 +4,7 @@
     [disabled]="isLoading"
     sticky
     [stickyPositionInsideScroll]="true"
-    [title]="navigationTitle"
+    [title]="defaultNavigationTitle || selectedItem.name"
     [anchors]="anchors">
   </form-navigation>
   <equipment-form
