FSPA-464 #comment added part of interactive styles

--- a/src/app/companies/components/company-card/company-card.component.scss
+++ b/src/app/companies/components/company-card/company-card.component.scss
@@ -1,29 +1,36 @@
 @import '../../../../assets/styles/variables';
 
 .card-section {
-
   .left {
-
-    .cropped-company-name {
+    .cropped-company-name-container {
       display: flex;
-      width: 28px;
-      height: 28px;
-      margin: 4px 0;
-      background: $black;
-      color: $white;
-      font-size: $mini-font-size;
+      width: 32px;
+      height: 32px;
+      border: none;
+      background: transparent;
       border-radius: $circle-radius;
-      justify-content: center;
       align-items: center;
-    }
+      justify-content: center;
 
+      .cropped-company-name {
+        display: flex;
+        width: 28px;
+        height: 28px;
+        margin: 4px 0;
+        background: $nevada;
+        color: $white;
+        font-size: $mini-font-size;
+        border-radius: $circle-radius;
+        justify-content: center;
+        align-items: center;
+      }
+    }
     .company-name {
       font-weight: bold;
     }
   }
 
   .middle {
-
     .company-contact-full-name {
       overflow: hidden;
       font-weight: bold;
@@ -31,7 +38,6 @@
   }
 
   .right {
-
     .load {
       display: flex;
 
@@ -45,6 +51,56 @@
 
       .load-name {
         margin-left: 5px;
+      }
+    }
+  }
+}
+
+:host-context(.parent-hover) {
+  background: $white;
+
+  &.company-card {
+    color: $black;
+    transition: all .5s;
+
+    .card-section {
+      .left {
+        .cropped-company-name-container {
+          .cropped-company-name {
+            background: $black;
+          }
+        }
+      }
+
+      .status {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+:host-context(.active) {
+  &.company-card {
+    background: $mako;
+    color: $silver;
+
+    .card-section {
+      border-radius: $default-border-radius;
+
+      .left {
+        .cropped-company-name-container {
+          border: 1px solid $white;
+          background: $black;
+
+          .cropped-company-name {
+            background: $white;
+            color: $mako;
+            font-weight: bold;
+          }
+        }
+      }
+      .status {
+        opacity: 1;
       }
     }
   }
