--- a/src/app/companies/components/company-cards/company-cards.component.scss
+++ b/src/app/companies/components/company-cards/company-cards.component.scss
@@ -1,16 +1,11 @@
 @import '../../../../assets/styles/variables';
 
- company-card {
+company-card {
+  background: transparent;
   color: $dark-grey;
-  background: $white;
 
   &.active {
     color: $black;
-    border-bottom-color: $blue;
-
-    .card-section {
-      border-bottom-color: $blue;
-    }
   }
 
   &.active,
@@ -19,30 +14,6 @@
 
     .status-text {
       background: $light-blue;
-    }
-  }
-}
-
-:host-context():hover {
-
-  company-card {
-    color: $black;
-    transition: all .5s ease-in-out;
-  }
-}
-
-:host-context() {
-
-  company-card {
-    transition: all .5s;
-
-    .card-section {
-      background: red;
-      .left {
-        .cropped-company-name {
-          color: red;
-        }
-      }
     }
   }
 }
