--- a/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.html
+++ b/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.html
@@ -1,19 +1,19 @@
-<div class="basic-information-container">
+<div class="basic-information-container hovered-bg">
   <div class="left">
-    <div class="cropped-company-name">{{this.croppedCompanyName}}</div>
-    <div class="name-type">
-      <div class="name">{{company.name}}</div>
+    <div class="cropped-company-name hovered-text">{{this.croppedCompanyName}}</div>
+    <div class="name-type hovered-text">
+      <div class="name hovered-text">{{company.name}}</div>
         <div class="type">{{typeText}}</div>
     </div>
   </div>
   <div class="right">
     <div class="mc-container">
       <span class="right-label">MC#:</span>
-      <span class="mc">{{company.mc}}</span>
+      <span class="mc hovered-text">{{company.mc}}</span>
     </div>
     <div class="tax-id-container">
       <span class="right-label">Tax-ID (W9):</span>
-      <span class="tax-id">{{company.taxId}}</span>
+      <span class="tax-id hovered-text">{{company.taxId}}</span>
     </div>
   </div>
 </div>
