--- a/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
+++ b/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
@@ -1,10 +1,11 @@
 @import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/mixins';
 
 .bd-switch-container {
   display: flex;
   height: $form-control-height;
   padding: 0 $default-margin;
-  background: $white;
+  background: $serenity;
   border-bottom: $border;
 
   .bd-switch-label {
@@ -22,7 +23,7 @@
   }
 
   .bd-buttons-container {
-    display: flex;    
+    display: flex;
     flex: 1;
     margin-right: -$default-margin;
 
@@ -32,7 +33,6 @@
       border: 0;
       margin: 1px 1px 1px 0;
       background: transparent;
-      color: $black;
       font-size: $form-control-font-size;
       letter-spacing: 1px;
       border-radius: $default-border-radius;
@@ -61,4 +61,8 @@
       color: $label-default-color;
     }
   }
+}
+
+:host() {
+  @include hovered;
 }
