--- a/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
+++ b/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
@@ -2,6 +2,7 @@
   <bd-button-switch
       *ngSwitchCase="true"
       class="bd-form-control"
+      [class.parent-hover]="parentHover"
       [labelText]="labelText"
       [disabled]="disabled"
       [hideLabel]="hideLabel"
@@ -13,6 +14,7 @@
       *ngSwitchCase="false"
       class="bd-form-control"
       [labelText]="labelText"
+      [class.parent-hover]="parentHover"
       [defaultTitleText]="defaultTitleText"
       [dropdownHeaderTemplate]="dropdownHeaderTemplate"
       [dropdownFooterTemplate]="dropdownFooterTemplate"
