--- a/src/app/base/base-card/base-card.component.scss
+++ b/src/app/base/base-card/base-card.component.scss
@@ -2,17 +2,6 @@
 @import '../../../assets/styles/styles';
 @import '../../../assets/styles/mixins';
 
-
-:host {
-
-  &.active {
-
-    .card-section {
-      border-bottom-color: $blue;
-    }
-  }
-}
-
 .card-section {
   position: relative;
   display: flex;
@@ -74,6 +63,7 @@
     width: 12px;
     height: 12px;
     background: $black;
+    opacity: $status-opacity;
     bottom: 13px;
     border-radius: $form-control-height;
   }
