--- a/src/app/companies/components/company-card/company-card.component.html
+++ b/src/app/companies/components/company-card/company-card.component.html
@@ -4,7 +4,9 @@ class="card-section"
 (mouseleave)="onLeave()"
 (click)="onClick()">
   <div class="left">
-    <span class="cropped-company-name">{{this.croppedCompanyName}}</span>
+      <div class="cropped-company-name-container">
+        <span class="cropped-company-name">{{this.croppedCompanyName}}</span>
+      </div>
     <div class="company-name ellipsis">
       {{item.name}}
     </div>
