--- a/src/app/companies/components/company-detail/components/company-address/company-address.component.html
+++ b/src/app/companies/components/company-detail/components/company-address/company-address.component.html
@@ -1,6 +1,6 @@
-<div class="location-container">
+<div class="location-container hovered-bg">
   <div class="left">
-    <div class="name">
+    <div class="name hovered-text">
       {{location.name}}
     </div>
 
@@ -8,7 +8,7 @@
       <span class="icon-location"></span>
       <span>{{streetAddress}}</span>
     </div>
-    <div class="notes">Notes</div>
+    <div class="notes hovered-text">Notes</div>
   </div>
   <div class="right">
     <bd-contact-info [contactCollection]="location.contactInfo"></bd-contact-info>
