--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/mixins';
 @keyframes labelFlight {
   from {
     margin-right: -50px;
@@ -47,7 +48,7 @@
   border-bottom: $border;
   margin-bottom: 0;
   flex-flow: row wrap;
-  background-color: inherit;
+  background-color: $serenity;
   box-shadow: inherit;
 
   .bd-label {
@@ -185,4 +186,8 @@
       color: $label-warning-color;
     }
   }
+}
+
+:host() {
+  @include hovered;
 }
