--- a/src/app/shared/components/form-navigation/form-navigation.component.scss
+++ b/src/app/shared/components/form-navigation/form-navigation.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/mixins';
 $container-height: $horizontal-scroll-container-height;
 
 form-navigation {
@@ -12,8 +13,8 @@ form-navigation {
 
   .form-navigation {
     padding: $default-margin $default-margin 0;
+    background: $serenity;
     border-radius: $default-border-radius;
-    background-color: $white;
     border-bottom: $border;
 
     .top-panel {
@@ -22,6 +23,7 @@ form-navigation {
 
       .title {
         display: inline-block;
+        color: $nevada;
         font-size: $default-font-size;
         line-height: $default-font-size;
         font-weight: bold;
@@ -49,7 +51,7 @@ form-navigation {
         }
 
         &.active {
-          color: $black;
+          color: $nevada;
           font-weight: bold;
         }
 
@@ -59,6 +61,27 @@ form-navigation {
 
         &:last-child {
           margin-right: 0;
+        }
+      }
+    }
+  }
+
+  &.parent-hover {
+    .form-navigation {
+      background: $white;
+
+      .top-panel {
+        .title {
+          color: $black;
+        }
+      }
+
+      .content {
+
+        span {
+          &.active {
+            color: $black;
+          }
         }
       }
     }
