--- a/src/app/companies/components/company-edit.component.html
+++ b/src/app/companies/components/company-edit.component.html
@@ -4,7 +4,7 @@
     sticky
     [stickyPositionInsideScroll]="true"
     [disabled]="isLoading"
-    [title]="'Company'"
+    [title]="actionName"
     [anchors]="anchors">
   </form-navigation>
   <company-form
