FSPA-504 fix issue with invalid date exception, add checking to valid date string to bd-pipe

--- a/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.html
+++ b/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.html
@@ -26,7 +26,8 @@
             </div>
             <div class="info-item">
                 <span class="title">Expiration</span>
-                <span class="value">{{equipment.licensePlateExpiration | date:'MM/dd/yy'}}</span>
+
+                <span class="value">{{equipment.licensePlateExpiration | bdDate: constants.DATE_FORMAT}}</span>
             </div>
         </section>
     </div>
