--- a/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.html
+++ b/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.html
@@ -4,6 +4,6 @@
         <span class="type">{{mileage.type}}</span>
     </div>
     <div class="date-container">
-        <span class="date">{{mileage.date | date:'short'}}</span>
+        <span class="date">{{mileage.date | bdDate: constants.DATE_FORMAT}}</span>
     </div>
 </div>
