FSPA-498 add new font-icons, add new icons to dropdown

--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -130,6 +130,12 @@
       .bd-dropdown-label {
         color: $label-active-color;
       }
+
+      .bd-dropdown-icon {
+        i {
+          color: $label-active-color;
+        }
+      }
     }
   }
 }
