FSPA-464 #comment fixed issue with selected card

--- a/src/app/equipment/components/equipment-card/equipment-card.component.scss
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.scss
@@ -20,3 +20,18 @@
     }
   }
 }
+
+:host-context(.active) {
+  &.equipment-card {
+    background: $mako;
+    color: $silver;
+
+    .card-section {
+      border-radius: $default-border-radius;
+
+      .status {
+        opacity: 1;
+      }
+    }
+  }
+}
