--- a/src/app/equipment/components/equipment-cards/equipment-cards.component.html
+++ b/src/app/equipment/components/equipment-cards/equipment-cards.component.html
@@ -1,5 +1,6 @@
 <equipment-card
   *ngFor="let equipment of this.equipments; trackBy: trackBy;"
   [item]="equipment"
+  [class.active]="isActive(equipment.id)"
   (select)="onCardSelect($event)">
 </equipment-card>
