--- a/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
+++ b/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
@@ -1,7 +1,7 @@
 <div class="location-container hovered-bg">
   <div class="left">
-      <bd-initials-circle class="initials-circle" [parentHover]="parentHover" [firstName]="contact.firstName" [lastName]="contact.lastName">
-      </bd-initials-circle>
+      <bd-user-circle class="initials-circle" [parentHover]="parentHover" [initials]="contactInitials">
+      </bd-user-circle>
       <div class="full-name-icons-container">
         <div class="full-name hovered-text">
           {{contact.firstName}} {{contact.lastName}}
