--- a/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
@@ -1,8 +1,8 @@
 <div class="information-container">
   <div class="left">
     <div class="top">
-      <bd-initials-circle class="initials-circle" [firstName]="driver.firstName" [lastName]="driver.lastName">
-      </bd-initials-circle>
+      <bd-user-circle class="initials-circle" [initials]="driverInitials">
+      </bd-user-circle>
       <div class="top-right">
         <div class="full-name">
           {{driver.firstName}} {{driver.lastName}}
