--- a/src/app/equipment/components/equipment-cards/equipment-cards.component.html
+++ b/src/app/equipment/components/equipment-cards/equipment-cards.component.html
@@ -2,6 +2,8 @@
   *ngFor="let equipment of this.equipments; trackBy: trackBy;"
   [item]="equipment"
   class="equipment-card"
+  [parentHover]="parentHover"
+  [class.parent-hover]="parentHover"
   [class.active]="isActive(equipment.id)"
   (select)="onCardSelect($event)">
 </equipment-card>
