--- a/src/app/loads/components/load-detail/components/customer-detail/customer-detail.component.html
+++ b/src/app/loads/components/load-detail/components/customer-detail/customer-detail.component.html
@@ -1,23 +1,21 @@
 <div class="customer-view-container">
     <section class="company-info">
-        <bd-initials-circle
-            [firstName]="companyNameSplitted[0]"
-            [lastName]="companyNameSplitted[1]"
+        <bd-company-circle
+            [companyName]="company.name"
             class="circle"
             size='default'>
-        </bd-initials-circle>
+        </bd-company-circle>
         <div class="info-container">
             <span class="company-name ellipsis">{{company.name}}</span>
             <span class="company-mc ellipsis">MC# {{company.mc}}</span>
         </div>
     </section>
     <section class="contact-info">
-        <bd-initials-circle
-            [firstName]="selectedContact.firstName"
-            [lastName]="selectedContact.lastName"
+        <bd-user-circle
+            [initials]="selectedContactInitials"
             class="circle"
             size='default'>
-        </bd-initials-circle>
+        </bd-user-circle>
         <div class="info-container">
             <span class="contact-name ellipsis">{{selectedContact.firstName}} {{selectedContact.middleName}} {{selectedContact.lastName}}</span>
             <span class="buttons-panel">
