--- a/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.html
+++ b/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.html
@@ -3,10 +3,9 @@
         <section class="equipment-info">
             <div class="name-info">
                 <div class="circle">
-                    <bd-initials-circle
-                        [firstName]="shortTypeText.charAt(0)"
-                        [lastName]="shortTypeText.charAt(1)">
-                    </bd-initials-circle>
+                    <bd-user-circle
+                        [initials]="shortTypeText">
+                    </bd-user-circle>
                 </div>
                 <div class="text">
                     <div class="name ellipsis">{{equipment.make}} {{equipment.model}}</div>
