FSPA-464 #comment code refactoring

--- a/src/app/companies/components/company-cards/company-cards.component.html
+++ b/src/app/companies/components/company-cards/company-cards.component.html
@@ -4,7 +4,7 @@
     [class.parent-hover]="parentHover"
     [parentHover]="parentHover"
     [active]="isActive(company.id)"
-    class="company-card"
+    class="card"
     [class.active]="isActive(company.id)"
     (select)="onCardSelect($event)">
 </company-card>
