--- a/src/app/base/base-card/base-card.component.scss
+++ b/src/app/base/base-card/base-card.component.scss
@@ -69,3 +69,34 @@
     border-radius: $form-control-height;
   }
 }
+
+:host-context(.parent-hover) {
+  background: $white;
+
+  &.card {
+    color: $black;
+    transition: all .5s;
+
+    .card-section {
+
+      .status {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+:host-context(.active) {
+  &.card {
+    background: $mako;
+    color: $silver;
+
+    .card-section {
+      border-radius: $default-border-radius;
+
+      .status {
+        opacity: 1;
+      }
+    }
+  }
+}
