FSPA-464 lint err

--- a/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.scss
+++ b/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.scss
@@ -60,14 +60,14 @@ $element-height: 18px;
   }
 }
 
-:host() {
+:host {
   @include hovered;
 
-    &.parent-hover {
-      .basic-information-container {
-          .cropped-company-name {
-            background: $black;
-          }
+  &.parent-hover {
+    .basic-information-container {
+      .cropped-company-name {
+        background: $black;
       }
     }
+  }
 }
