FSPA-464 #comment code refactoring

--- a/src/app/shared/components/bd-icons/bd-circle/bd-circle.component.html
+++ b/src/app/shared/components/bd-icons/bd-circle/bd-circle.component.html
@@ -1,5 +1,5 @@
 <div [class.active]="active" class="circle-container">
-  <div [class.parent-hover]="parentHover" class="circle {{size}}">
+  <div class="circle {{size}}" [class.parent-hover]="parentHover">
   {{dataInitials}}
   </div>
 </div>
