--- a/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.html
+++ b/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.html
@@ -10,6 +10,7 @@
   </div>
   <div class="bottom">
     <bd-user-circle
+      [parentHover]="true"
       [initials]="initials">
     </bd-user-circle>
     <div class="right">
