--- a/src/app/shared/components/bd-icons/bd-user-circle/bd-user-circle.component.html
+++ b/src/app/shared/components/bd-icons/bd-user-circle/bd-user-circle.component.html
@@ -1,1 +1,1 @@
-<bd-circle [initials]="userInitials" [size]="size"></bd-circle>
+<bd-circle [initials]="userInitials" [parentHover]="parentHover" [size]="size"></bd-circle>
