FSPA-464 remove odd code

--- a/src/app/equipment/components/equipment-cards/equipment-cards.component.html
+++ b/src/app/equipment/components/equipment-cards/equipment-cards.component.html
@@ -1,7 +1,7 @@
 <equipment-card
   *ngFor="let equipment of this.equipments; trackBy: trackBy;"
   [item]="equipment"
-  class="equipment-card"
+  class="card"
   [parentHover]="parentHover"
   [class.parent-hover]="parentHover"
   [class.active]="isActive(equipment.id)"
