FSPA-464 added interactive styles to equipment cards

--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -5,6 +5,7 @@ class="card-section"
 (click)="onClick()">
   <div class="left">
     <bd-user-circle
+      [active]="active"
       class="initials-circle"
       [initials]="equipmentShortTypeText"
       >
