--- a/src/app/equipment/components/equipment-cards/equipment-cards.component.html
+++ b/src/app/equipment/components/equipment-cards/equipment-cards.component.html
@@ -4,6 +4,7 @@
   class="card"
   [parentHover]="parentHover"
   [class.parent-hover]="parentHover"
+  [active]="isActive(equipment.id)"
   [class.active]="isActive(equipment.id)"
   (select)="onCardSelect($event)">
 </equipment-card>
