FSPA-485 #comment added address inside driver view mode information contact info section

--- a/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
@@ -30,6 +30,10 @@
     </div>
   </div>
   <div class="right">
+    <div class="address">
+      <span class="icon-location"></span>
+        <span>{{streetAddress}}</span>
+    </div>
     <bd-contact-info [contactCollection]="driver.contactInfo"></bd-contact-info>
   </div>
 </div>
