--- a/src/app/forms/driver-form/driver-form.component.html
+++ b/src/app/forms/driver-form/driver-form.component.html
@@ -1,13 +1,22 @@
 <form [formGroup]="driverForm" novalidate (ngSubmit)="submit(driverForm.value, driverForm.valid)">
 	<navigation-anchor id="driver-personal-information" [isNestedForm]="isNestedForm"></navigation-anchor>
 	<bd-form-section [disabled]="disabled" [labelText]="'PERSONAL INFO'">
-		<bd-input class="bd-form-control" formControlName="firstName" [labelText]="'First Name'"></bd-input>
-		<bd-input class="bd-form-control" formControlName="lastName" [labelText]="'Last Name'"></bd-input>
+		<div class="section">
+			 <bd-validator [component]="driverForm.controls.firstName" [errorDefs]="{required: 'Firstname is required'}">
+				<bd-input class="bd-form-control left-control" formControlName="firstName" [placeholder]="'First Name'"></bd-input>
+			</bd-validator>
+			<bd-input class="bd-form-control middle-control" formControlName="middleName" [placeholder]="'Middle Name'"></bd-input>
+			<bd-validator [component]="driverForm.controls.lastName" [errorDefs]="{required: 'Lastname is required'}">
+				<bd-input class="bd-form-control right-control" formControlName="lastName" [placeholder]="'Last Name'"></bd-input>
+			</bd-validator>
+		</div>
 		<bd-form-datepicker
-		class="bd-form-control"
-		formControlName="birthDate"
-		[labelText]="'Date Of Birth'"
-		[minDate]="minBirthDate" [maxDate]="maxBirthDate"></bd-form-datepicker>
+			class="bd-form-control"
+			formControlName="birthDate"
+			[labelText]="'Date Of Birth'"
+			[minDate]="minBirthDate" 
+			[maxDate]="maxBirthDate">
+		</bd-form-datepicker>
 		<bd-input class="bd-form-control" formControlName="ssn" [labelText]="'SSN'"></bd-input>
 		<bd-dropdown class="bd-form-control" formControlName="type" [labelText]="'Driver type'" [items]="driverTypes">
 		</bd-dropdown>
