--- a/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.html
@@ -12,11 +12,11 @@
   <div class="bottom">
     <div class="endorsements-container">
       <span class="bottom-label">Endors:</span>
-      <span class="types">{{endorsementsTypes}}</span>
+      <span class="types">{{sortEndorsementsByTypes(this.driver.license.endorsements)}}</span>
     </div>
     <div class="restrictions-container">
       <span class="bottom-label">Restrict:</span>
-      <span class="types">{{restrictionsTypes}}</span>
+      <span class="types">{{sortRestrictionsByTypes(this.driver.license.restrictions)}}</span>
     </div>
   </div>
 </div>
